# cc3

./: .gitignore  AGENTS.md  Cargo.toml  issues.jsonl  test.c
.beads/: issues.jsonl  last-touched
asm-test/: float.s  memory.s  relocations.s  simple.s
diffs/: 0.diff  1.diff  10.diff  100.diff  101.diff  102.diff  103.diff  104.diff  105.diff  106.diff  107.diff  108.diff  109.diff  11.diff  110.diff  111.diff  112.diff  113.diff  114.diff  115.diff  116.diff  117.diff  118.diff  119.diff  12.diff  120.diff  121.diff  122.diff  123.diff  124.diff  125.diff  126.diff  127.diff  128.diff  129.diff  13.diff  130.diff  131.diff  132.diff  133.diff  (+276 more)
docs/: architecture.md  assembler-design.md  c11.md  c17.md  c23.md  complex_numbers.md  linker-design.md
include/: stdarg.h
src/: ast.rs  codegen.rs  error.rs  lexer.rs  main.rs  parser.rs  preprocess.rs  preprocessor.rs
src/asm/: assembler.rs  lexer.rs  mod.rs  parser.rs  section.rs  symbol.rs
test/: alloc.c  bitfield.c  bitfield_op_assign.c  c23.c  complex.c  crlf_line_continuation.c  defined.c  file_line.c  file_line_include.h  func_macro.c  function.c  include-next.c  include_angle.c  include_macro.c  initializer.c  line_continuation.c  literal.c  long_double.c  macro.c  macro_constexpr_ident.c  macro_whitespace.c  param_omit.c  param_ptr.c  pointer_neg.c  predefined_macros.c  static_assert.c  struct.c  test.h  threads.c  unicode.c  va_args.c  varargs.c  vla_param.c
test/include-next1/: file1.h
tests/: asm.rs  asm_tests.rs  codegen.rs  diagnostics.rs  driver_test.rs  thirdparty.rs  warnings.rs
(+243 files in other folders)
