[package]
name = "cc3"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
colored = "3.0.0"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.1.2"
datatest-stable = "0.3.3"
insta = { version = "1.46.0", features = ["glob", "yaml"] }
insta-cmd = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.24.0"

[[test]]
name = "codegen"
harness = false

[[test]]
name = "diagnostics"
harness = false


